[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Enemy/SLIME-PLATFORMER_STRIP_WalkTurn-ty61oy.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/Slime.gd" type="Script" id=5]
[ext_resource path="res://Assets/Shaders/WhiteShader.tres" type="Material" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Animation",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 7.37684

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Start"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "Float"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.824, -9.12415 ), Vector2( -1.824, -18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthBar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10.222, -19 ), Vector2( -10.222, -28 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Die"
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Slime" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 16
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 9 )
position = Vector2( 0, -9.124 )
scale = Vector2( 0.503879, 0.503879 )
frames = SubResource( 6 )
animation = "Animation"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.350769, -6.80491 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slimeAnimation = SubResource( 8 )

[node name="SlimeBlinkAnimation" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Start = SubResource( 9 )
anims/Stop = SubResource( 10 )

[node name="FloatAroundAnimation" type="AnimationPlayer" parent="."]
anims/Float = SubResource( 11 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="Death" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 12 )
